Increase the max number of color components to 14 to accomodate a new record (13) found in the wild. Bug 691425.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11492 a1074d23-0009-0410-80fe-cf8c14f379e6